--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
     <a-nft
       type="nft"
-      url="./img.jpg"
+      url="img.jpg"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="./Ft.glb"
+        gltf-model="Ft.glb"
         scale="5 5 5"
         position="50 150 0"
       >
