--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <a-nft
       type="nft"
-      url="img.jpg"
+      url="img"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
